--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,12 @@
     <string name="americano_desc">Espresso with added hot water (100-150 ml). Often served in a cappuccino cup. (The espresso is added into the hot water rather than all the water being flowed through the coffee that would lead to over extraction.)</string>
     <string name="latte_title">CAFFE LATTE</string>
     <string name="latte_desc">A tall, mild \'milk coffee\' (about 150-300 ml). An espresso with steamed milk and only a little milk foam poured over it. Serve in a latte glass or a coffee cup. Flavored syrup can be added.</string>
+
+    <!-- TAMBAHAN UNTUK COMMIT No.5 -->
+    <string name="cappuccino_title">CAPPUCCINO</string>
+    <string name="cappuccino_desc">Equal parts espresso, steamed milk, and milk foam. Served in a cappuccino cup.</string>
+    <string name="espresso_title">ESPRESSO</string>
+    <string name="espresso_desc">A concentrated form of coffee served in small, strong shots.</string>
+
     <string name="coffee_list">Coffee List</string>
 </resources>
